
origin/master

  [BUG FIXES]

  - Handle files with NULL bytes in them
    Instead of using `pdu_extendf` and only getting partial BLOCK PDUs,
    use `pdu_extend` and fwrite to get the full block.  Fixes corruption
    found when trying to enforce presence of PNG images and other bin files.



3.1.1        2015-03-14                                    runtime 20150209

  [ENHANCEMENTS]

  - Don't Create Empty Files
    If res.file.present has to create a file because it doesn't exist, but
    then fails to contact clockd for the remote SHA1 / file contents, that
    file should be removed.  Otherwise, we are left with extant files with
    nothing in them, which can confuse some 'conf.d' style code.

  [DOCUMENTATION]

  - Clarify the effects of composing `ondemand' and `test' in res_exec
    It may not do what you think it will.



3.1.0        2015-03-11                                    runtime 20150209

  [ENHANCEMENTS]

  - Rework Mesh Signalling Protocol
    `meshd' now operates solely as a proxy/router for proxying commands from
    clients to interested `cogd' agents, and routing replies back.  As such,
    timeouts have been moved into clients like `cw-mesh', and the protocol
    has been redesigned to provide faster convergence on subset responses.

    `cw-client' now has two timeouts, a discovery timeout (in milliseconds)
    that represents a minimum amount of time the client will wait for nodes
    to opt-in, and a proper timeout for waiting on client execution.

    Additionally, the ACL check on `cogd' nodes now comes before the
    filtering step, to avoid accidental disclosure of node information.

    The new (3.1) mesh protocol is documented in the MESH file.


  [DOCUMENTATION]

  - Fix incorrect flag examples in `cw-cert' usage screen.



3.0.17       2015-03-06                                    runtime 20150209

  [BUG FIXES]

  - Fix bad offset in user remediation